<resources>
    <string name="app_name">Channel Showdown</string>
    <!-- ACTIVITIES-->
    <string name="register">Register</string>
    <string name="main">MainActivity</string>
    <string name="dashboard">Dashboard</string>
    <string name="splash">Splash</string>
    <string name="profile">My Profile</string>
    <string name="info">Personal Information</string>
    <string name="create_event">Create an event</string>
    <string name="upcoming_event_activity">Upcoming Event</string>
    <string name="my_event_activity">My Event</string>
    <string name="entries">Entries</string>
    <string name="view_profile">View Profile</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_video">Upload Video</string>
    <string name="select_edit">Select Option</string>
    <string name="upload_thumbnail">Upload Thumbnail</string>
    <string name="upload_event_photo">Upload photo</string>
    <string name="live_stream_commentator">Live Stream Commentator</string>
    <string name="live_stream_contestant">Live Stream Contestant</string>
    <string name="live_stream_audience">Live Stream Audience</string>
    <string name="history_result">Event History</string>
    <string name="result">Result</string>
    <string name="episode">Episode</string>
    <string name="video_player">Video Play</string>
    <!-- LOGIN LAYOUT -->
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="logo">Logo</string>
    <!-- REGISTER LAYOUT -->
    <string name="sign_up_now"> Sign up now</string>
    <string name="dont_have_account">Don\'t have an Account?&#160;</string>
    <string name="register_now">Register Now</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="commentator_account">Commentator Account</string>
    <!-- ADDITIONAL INFO LAYOUT-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="bio">Describe yourself</string>
    <string name="confirm">Confirm</string>
    <string name="full_name">Full name</string>
    <string name="select_video">Select Video</string>
    <string name="select_picture">Select Picture</string>
    <string name="upload">Upload</string>
    <string name="select_thumbnail">Select Thumbnail</string>
    <string name="edit_personal_info">Edit Personal Information</string>
    <string name="upload_profile_video">Upload Profile Video</string>
    <string name="upload_thumbnail_video">Upload video thumbnail</string>
    <!-- PROFILE LAYOUT -->
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_video">Profile Video</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="back">Back</string>
    <string name="about_me">About me</string>
    <string name="next">Next</string>
    <string name="getting_started">Getting started…</string>
    <!-- CREATE EVENT LAYOUT -->
    <string name="create_your_own_event">Create your own event</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_date">Event Date YYYY-MM-DD</string>
    <string name="event_time">Event Time HH:MM:SS</string>
    <string name="event_prize">Event Prize</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="datetime">YYYY-MM-DD HH:MM:SS</string>
    <string name="create">Create event</string>
    <!-- UPCOMING EVENT LAYOUT -->
    <string name="create_event_now">Create and host your own event now !</string>
    <string name="event_date_start">Event Date :</string>
    <string name="commentator">Commentator :</string>
    <string name="prize">Prize :</string>
    <string name="contestant1">Contestant 1 :</string>
    <string name="contestant2">Contestant 2 :</string>
    <string name="join_event">Join Event</string>
    <string name="view_entries">View Entries</string>
    <string name="start_event">Start Event</string>
    <string name="details">Details :</string>
    <!-- APP NAME -->
    <string name="channel_showdown">Channel Showdown</string>
    <!-- EVENT FRAGMENT -->
    <string name="create_an_event">Create an event</string>
    <string name="my_event">My Event</string>
    <!-- HISTORY FRAGMENT -->
    <string name="click_to_view">Click image to view details</string>
    <string name="show_event_results">View Event Results</string>
    <string name="voting_results">Voting results</string>
    <!-- LIVE STREAM -->
    <string name="waiting_for_contestant">Waiting for contestant</string>
    <string name="waiting_for_commentator">Waiting for commentator</string>
    <string name="commentator_disconnect">Commentator disconnected</string>
    <string name="contestant_disconnect">Contestant disconnected</string>
    <string name="commentator_title">COMMENTATOR</string>
    <string name="contestant1_title">CONTESTANT 1</string>
    <string name="contestant2_title">CONTESTANT 2</string>
    <string name="recording">Recording</string>
    <!-- EPISODE FRAGMENT -->
    <string name="replay">Replay Event</string>
    <!-- FOR TESTING-->
    <string name="test">Test</string>
    <string name="this_is_live">This is Live</string>
    <string name="this_is_episodes">this is Episodes</string>
    <string name="this_is_upcoming">This is Upcoming</string>
    <string name="this_is_my_events">This is My Events</string>
    <string name="angelo">Angelo</string>
    <string name="test_email">angelocool177@yahoo.com</string>
    <string name="angelo_montil">Angelo Montil</string>
    <string name="username_sample">kulotski321</string>
    <string name="test_bio">This is my Bio. I am very handsome and cool. Please date me because I\'m very lonely.</string>\
    <string name="empty">Empty Slot</string>
    <string name="loading">Loading</string>
    <string name ="cancel">Cancel</string>
    <string name="no_description">No description</string>
    <string name="remaining_time">Time Remaining:</string>
    <string name="zero">0</string>
    <string name="start_stream">Start Stream</string>
    <string name="end_stream">End Stream</string>
    <string name="applicants">Applicants</string>
</resources>
