<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_orange_primaryLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/user_profile_pic"
            android:id="@+id/profile_picture"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:civ_border_color="@color/color_yellow_primary"
            app:civ_border_width="5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/profile_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textSize="22sp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="12sp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/profile_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:maxLength="120"
                android:text="@string/bio"
                android:lines="4"
                android:maxLines="4"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:text="@string/edit_profile"
        android:textSize="16sp"
        android:background="@color/color_yellow_primary"
        android:layout_marginTop="40dp"
        android:layout_alignParentBottom="true">
    </Button>
</RelativeLayout>