<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/event_picture"
            android:layout_width="fill_parent"
            android:layout_height="210dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_name_upcoming_commentator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/loading"
            android:textColor="@color/color_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_picture"
            />

        <TextView
            android:id="@+id/event_date_upcoming_commentator"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginTop="5dp"
            android:text="@string/loading"
            android:textColor="@color/color_red"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/event_name_upcoming_commentator"
             />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="73dp"
            android:layout_height="21dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/event_date_start"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name_upcoming_commentator"
            tools:text="Event Date :" />

        <TextView
            android:id="@+id/details_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="Details:"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/event_description_upcoming_commentator"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/loading"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_textview" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="79dp"
            android:layout_height="21dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/contestant1"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="78dp"
            android:layout_height="18dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/contestant2"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/event_contestant2_upcoming_commentator"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/loading"
            android:textColor="@color/color_black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/event_contestant1_upcoming_commentator" />

        <TextView
            android:id="@+id/event_contestant1_upcoming_commentator"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/loading"
            android:textColor="@color/color_black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/event_date_upcoming_commentator" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="40dp"
            android:layout_height="18dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/prize"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_description_upcoming_commentator" />

        <TextView
            android:id="@+id/event_prize_upcoming_commentator"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="8dp"
            android:text="@string/event_prize"
            android:textColor="@color/color_green_primary"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/event_description_upcoming_commentator" />

        <Button
            android:id="@+id/start_event_btn"
            android:layout_width="122dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="8dp"
            android:background="@color/color_red"
            android:text="@string/start_stream"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myevent_commentator_time" />

        <Button
            android:id="@+id/view_entries_btn"
            android:layout_width="125dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_button"
            android:text="@string/view_entries"
            android:textSize="16sp"
            android:textColor="@color/color_purple_primaryDark"
            app:layout_constraintEnd_toStartOf="@+id/upload_myevent_pic_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/upload_myevent_pic_btn"
            android:layout_width="125dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_button"
            android:text="@string/upload_event_photo"
            android:textSize="16sp"
            android:textColor="@color/color_purple_primaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view_entries_btn"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="8dp"
            android:text="@string/remaining_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_entries_btn" />

        <TextView
            android:id="@+id/myevent_commentator_time"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/view_entries_btn" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>