<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_event_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="16"
                android:hint="@string/event_name"
                android:inputType="textCapWords"
                android:focusable="true"
                android:drawableLeft="@drawable/title_icon"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/title_icon"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">
            <EditText
                android:id="@+id/input_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/event_date"
                android:drawableLeft="@drawable/date_icon"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/date_icon"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">
            <EditText
                android:id="@+id/input_event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:hint="@string/event_time"
                android:drawableLeft="@drawable/time_icon"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/time_icon"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_event_prize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="16"
                android:hint="@string/event_prize"
                android:maxLength="20"
                android:inputType="textCapWords"
                android:focusable="true"
                android:drawableLeft="@drawable/prize_icon"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/prize_icon"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_event_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/event_description"
                android:ems="16"
                android:maxLines="8"
                android:maxLength="300"
                android:drawableLeft="@drawable/bio_icon"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/bio_icon" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/confirm_event_btn"
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:background="@color/color_yellow_primary"
            android:layout_marginTop="40dp">
        </Button>
    </LinearLayout>
</RelativeLayout>