<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/event_image_upcoming"
            android:layout_width="fill_parent"
            android:layout_height="188dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_name_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/loading"
            android:textColor="@color/color_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_image_upcoming"
          />

        <TextView
            android:id="@+id/event_date_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:text="@string/loading"
            android:textColor="@color/color_red"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/event_name_upcoming"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/event_date_start"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name_upcoming"
            tools:text="Event Date :" />

        <TextView
            android:id="@+id/event_description_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/loading"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="81dp"
            android:layout_height="17dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/commentator"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="79dp"
            android:layout_height="18dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/contestant1"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="78dp"
            android:layout_height="18dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/contestant2"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/event_commentator_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/loading"
            android:textColor="@color/color_black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/event_date_upcoming" />

        <TextView
            android:id="@+id/event_contestant1_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/loading"
            android:textColor="@color/color_black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/event_commentator_upcoming" />

        <TextView
            android:id="@+id/event_contestant2_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/loading"
            android:textColor="@color/color_black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/event_contestant1_upcoming" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="39dp"
            android:layout_height="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/prize"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_description_upcoming" />


        <TextView
            android:id="@+id/event_prize_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:text="@string/loading"
            android:textColor="@color/color_green_primary"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/event_description_upcoming" />

        <TextView
            android:id="@+id/event_id_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/empty"
            android:visibility="gone" />

        <Button
            android:id="@+id/join_event_btn"
            android:layout_width="150dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/round_button"
            android:text="@string/join_event"
            android:textSize="16sp"
            android:textColor="@color/color_purple_primaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>